--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/retail?useUnicode=true&useJDBC
 spring.datasource.username=root
 spring.datasource.password=12345
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
+
