--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -69,6 +74,27 @@
 	            <groupId>org.apache.maven.plugins</groupId>
 	            <artifactId>maven-surefire-plugin</artifactId>
 	        </plugin>
+	        
+	        <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>6.4.4</version>
+                <configuration>
+                    <url>jdbc:mysql://localhost:3306/retail?serverTimezone=UTC</url>
+                    <user>root</user>
+                    <password>12345</password>
+                </configuration>
+                <dependencies>
+                    <dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.44</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+	        
+	        
+	        
 			
 		</plugins>
 	</build>
